--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="stylesheet" type="text/css" media="screen" href="./node_modules/c3/c3.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="./Source/CSS/Include/c3.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="./Source/CSS/index.css">
 
     <script src="./Source/JS/Include/particlesjs-config.js"></script>
     <script src="./Source/JS/Include/particles.js"></script>
+    <script src="./Source/JS/Include/d3.min.js"></script>
+    <script src="./Source/JS/Include/c3.min.js"></script>
     <script src="./Source/JS/Include/vue.js"></script>
     
     <title>Hardwave Fuzzy Project</title>
